--- a/arrays.html
+++ b/arrays.html
@@ -9,7 +9,10 @@
     <h1>JavaScript Arrays</h1>
 
     <script>
-// your code goes here
+    	var MEET=["CS", "Entrepreneurship", "DU"]
+    	var MEET = prompt("what are the three things you are exited about in MEET?")
+    	
+
     </script>
 </body>
 
