--- a/vars.html
+++ b/vars.html
@@ -9,7 +9,24 @@
     <h1>JavaScript Variables</h1>
 
     <script>
-// your code goes here!
+    	var birthyear= parseInt(prompt("what year were you born in?"))
+    	var luckyNumber= parseInt(prompt("what is your lucky number?"))
+    	var FavFruit= "Banana" 
+    	var FavSubject= "CS"
+    	var answer = birthyear/luckyNumber;
+    	alert(answer);
+    	var answer = birthyear+luckyNumber;
+    	alert(answer);
+    	var answer = birthyear+FavSubject;
+    	alert(answer);
+    	var answer = birthyear+luckyNumber+FavFruit;
+    	alert(answer);
+    	var answer = birthyear+luckyNumber+FavSubject;
+    	alert(answer);
+
+
+
+
     </script>
 </body>
 
