--- a/hello.html
+++ b/hello.html
@@ -3,15 +3,16 @@
 
 <head>
     <title>JavaScript Hello World</title>
+    <script src= "index.js">
+
+
+</script>
 </head>
 
 
 <body>
-    <h1>A JavaScript Hello, World!</h1>
+    <h1>good stay happy!!!</h1>
 
-    <script>
-// your code goes here
-    </script>
 </body>
 
 </html>
